eks-gitops/applications/manifest/gateway/gateway-external.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pkrb-dev-gateway-external
  namespace: default
spec:
  selector:
    istio: pkrb-dev-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*'
    port:
      name: https-443
      number: 443
      protocol: HTTP
